1.完成MQTTclient 基于linux平台的code

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -2,12 +2,14 @@ PROJECT( mqtt_client )
 CMAKE_MINIMUM_REQUIRED( VERSION 2.4.7 )
 ADD_SUBDIRECTORY( net_transport )
 ADD_SUBDIRECTORY( mqtt_src )
+ADD_SUBDIRECTORY( mqtt_component )
 
 INCLUDE_DIRECTORIES( net_transport )
 INCLUDE_DIRECTORIES( mqtt_src )
-
+INCLUDE_DIRECTORIES( mqtt_component )
 
 ADD_EXECUTABLE(mqtt_client
     main.c
 )
-TARGET_LINK_LIBRARIES( mqtt_client transport mqtt)
+TARGET_LINK_LIBRARIES( mqtt_client transport mqtt mqtt_component)
+target_compile_definitions(mqtt_client PRIVATE MQTTCLIENT_PLATFORM_HEADER=MQTTLinux.h)
