1.完成cmake文件的升级 2.修复bug，编译通过

--- a/project/mqtt_component/CMakeLists.txt
+++ b/project/mqtt_component/CMakeLists.txt
@@ -1,4 +1,5 @@
 ADD_LIBRARY( mqtt_component STATIC  MQTTClient.c MQTTLinux.c)
 INCLUDE_DIRECTORIES( ../mqtt_src )
-TARGET_LINK_LIBRARIES( mqtt_component mqtt )
+INCLUDE_DIRECTORIES( ../list_component )
+TARGET_LINK_LIBRARIES( mqtt_component mqtt list_component)
 target_compile_definitions(mqtt_component PRIVATE MQTTCLIENT_PLATFORM_HEADER=MQTTLinux.h)
